fixed tooltip flicker issue in Windows/Linux

--- a/src/main/resources/stylesheets/jmetro-light.css
+++ b/src/main/resources/stylesheets/jmetro-light.css
@@ -307,7 +307,6 @@
     -fx-background-insets: 0;
     -fx-background-radius: 0;
     -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /*  4 8 4 8 */
-    -fx-effect: dropshadow(gaussian, #989898, 16, 0.0, 4, 4);
     -fx-font-family: "Segoe UI Semilight", "Segoe UI Light", "Segoe UI", Helvetica, Arial, sans-serif;
     -fx-opacity: .8;
 }
